iOS: Added icon for application, added background audio mode, etc. The player finally works on iOS. Added static callbacks for iOS.
Related to issue #405 and issue #407.

git-svn-id: http://hamster-svn/svn/repos/base@673 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm/branches/current/MPfm.Player/MPfm.Player.iOS.csproj
@@ -134,6 +134,7 @@
     <Reference Include="taglib-sharp">
       <HintPath>..\MPfm.Sound\Lib\iOS\taglib-sharp.dll</HintPath>
     </Reference>
+    <Reference Include="monotouch" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Lib\Bass.Net.dll" />
