--- a/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
@@ -117,16 +117,16 @@
     <None Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
-    <Compile Include="AppDelegate.cs" />
-    <Compile Include="MPfm_iOSViewController.cs" />
-    <Compile Include="MPfm_iOSViewController.designer.cs">
+    <Compile Include="Classes\Controllers\MPfm_iOSViewController.cs" />
+    <Compile Include="Classes\Controllers\MPfm_iOSViewController.designer.cs">
       <DependentUpon>MPfm_iOSViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\AppDelegate.cs" />
+    <Compile Include="Classes\Main.cs" />
   </ItemGroup>
   <ItemGroup>
-    <InterfaceDefinition Include="MPfm_iOSViewController_iPhone.xib" />
-    <InterfaceDefinition Include="MPfm_iOSViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPad\MPfm_iOSViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\MPfm_iOSViewController_iPhone.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -153,5 +153,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
+    <Folder Include="Classes\" />
+    <Folder Include="XIB\" />
+    <Folder Include="XIB\iPhone\" />
+    <Folder Include="XIB\iPad\" />
+    <Folder Include="Classes\Controllers\" />
+    <Folder Include="Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\icon57.png" />
+    <Content Include="Images\icon114.png" />
   </ItemGroup>
 </Project>
