iOS: Added temp splash screen. More bug fixes on UI.
Related to issue #405.

git-svn-id: http://hamster-svn/svn/repos/base@676 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
@@ -164,4 +164,8 @@
     <Content Include="Images\icon57.png" />
     <Content Include="Images\icon114.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Default%402x.png" />
+    <BundleResource Include="Resources\Default.png" />
+  </ItemGroup>
 </Project>
