iOS: Fixed build for Ad-Hoc and AppStore.
Related to issue #405.

git-svn-id: http://hamster-svn/svn/repos/base@677 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/branches/current/MPfm.iOS/MPfm.iOS.csproj
@@ -82,6 +82,7 @@
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
     <MtouchSdkVersion>6.0</MtouchSdkVersion>
+    <IpaPackageName />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
     <DebugType>none</DebugType>
