--- a/MPfm/branches/current/MPfm.iOS/Info.plist
+++ b/MPfm/branches/current/MPfm.iOS/Info.plist
@@ -17,6 +17,14 @@
 	<string>1.0</string>
 	<key>MinimumOSVersion</key>
 	<string>5.0</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/Junction.otf</string>
+		<string>Fonts/OstrichBlack.ttf</string>
+		<string>Fonts/OstrichLight.ttf</string>
+		<string>Fonts/OstrichRegular.ttf</string>
+		<string>Fonts/OstrichRounded.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -27,8 +35,6 @@
 		<integer>2</integer>
 	</array>
 	<key>UIFileSharingEnabled</key>
-	<true/>
-	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
